Bug 13365 - GetDCNameEx only ever returns itself (often mistakenly)
Summary: GetDCNameEx only ever returns itself (often mistakenly)
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-02 22:48 UTC by Garming Sam
Modified: 2019-08-01 13:59 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Garming Sam 2018-04-02 22:48:32 UTC
The implementation does not bother checking domains, nor does it bother trying to return a DC outside of the site that the DC currently resides in.
Comment 1 Stefan Metzmacher 2019-08-01 13:59:18 UTC
Fixed as d1730d6ff19b60ebf9f6b18aaa4afab733b18b25 for 4.9.0